# DomesdayDuplicator

./: .gitignore
.github/workflows/: build.yml
DomesdayDuplicator/: CMakeLists.txt  UsbDeviceBase.cpp  UsbDeviceBase.h  UsbDeviceLibUsb.cpp  configurationdialog.cpp  mainwindow.cpp  mainwindow.h
